# basic_http_server

./: .gitignore  README.md  main.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
