[tool.poetry]
name = "basic-http-server"
version = "0.1.0"
description = ""
authors = ["Erkam Kumru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wmi = "^1.5.1"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
